[gd_scene load_steps=3 format=3 uid="uid://bjii1wqlcyoda"]

[ext_resource type="Script" path="res://addons/cardengine/container/abstract_container.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c3houkqvp7csd" path="res://addons/cardengine/core/drop_area.tscn" id="2"]

[node name="AbstractContainer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="CardPath" type="Path2D" parent="."]

[node name="DropArea" parent="." instance=ExtResource("2")]
anchors_preset = 0
mouse_filter = 1

[node name="Cards" type="Control" parent="DropArea"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[connection signal="resized" from="." to="." method="_on_AbstractContainer_resized"]
[connection signal="dropped" from="DropArea" to="." method="_on_DropArea_dropped"]
